# cryptobits

./: .gitignore  README.md  package.json  pyproject.toml
admin/: package.json
admin/src/: App.js  Dashboard.js  Menu.js  MyAppBar.js  MyLayout.js  MyUrlField.js  Page.js  authProvider.js  customRoutes.js  dataProvider.js  posts.js
nft-printer/: .gitignore  package.json
nft-printer/public/: env.js
nft-printer/src/: App.tsx  firebase.js  index.tsx
nft-printer/src/components/: AwsUpload.js  Cropper.tsx  FbUpload.js  Selector.tsx  Upload.js
nft-printer/src/utils/: randomString.js
server/: main.py  package.json
server/src/: app.ts  index.ts
utils/: cg_scraper.py
